<resources>
    <string name="app_name">VietnamAirline</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="blank"></string>
    <string name="title_activity_ac_func_claim_missing_mile">AcClaimMissingMile</string>
    <string name="title_activity_ac_claim_missing_mile_vn">AcClaimMissingMileVNA</string>
    <string name="BOF_DOES_NOT_EXIST">Account doesn\'t exist</string>
    <string name="COMMON_BACK">Back</string>
    <string name="COMMON_SAVE">Save</string>
    <string name="COMMON_DONE">Done</string>
    <string name="COMMON_CANCEL">Cancel</string>
    <string name="COMMON_SEND">Send</string>
    <string name="COMMON_NEW">New</string>
    <string name="COMMON_OK">OK</string>
    <string name="LOGIN_LOGIN">Login</string>
    <string name="LOGIN_ENROLLMENT">Enrollment</string>
    <string name="P_USERNAME">UserName</string>
    <string name="P_PASSWORD">Password</string>
    <string name="TAB_HOME">Home</string>
    <string name="TAB_ACCOUNT">Account</string>
    <string name="TAB_MORE">More</string>
    <string name="TAB_NEWS">News</string>
    <string name="TAB_REDEEM">Redeem</string>
    <string name="HOME_BTN_ACCOUNT">ACCOUNT</string>
    <string name="HOME_BTN_CLAIM">CLAIM MISSING MILE</string>
    <string name="HOME_BTN_REGISTER">REGISTER PROMOTION</string>
    <string name="HOME_BTN_ESTIMATOR">MILE ESTIMATOR</string>
    <string name="HOME_BTN_REDEEM">REDEEM MILES</string>
    <string name="HOME_BTN_BUYORTRANSFER">BUY OR TRANSFER MILES</string>
    <string name="HOME_BTN_SENDREQUEST">SEND REQUEST</string>
    <string name="MORE_BTN_SETTING">Setting</string>
    <string name="MORE_BTN_TERM">Term and conditions</string>
    <string name="MORE_BTN_FAQ">FAQ</string>
    <string name="MORE_BTN_PRIVACY">Privacy</string>
    <string name="MORE_NAV_MORE">More</string>
    <string name="MORE_TABBAR_MORE">More</string>
    <string name="SETTING_LANGUAGE">Language</string>
    <string name="SETTING_NAV_SETTING">Setting</string>
    <string name="SETTING_SELECT_LANGUAGE">Select a language</string>
    <string name="SETTING_VERSION">Version</string>
    <string name="ACC_NAV_ACCOUNT">Account</string>
    <string name="ACC_PROFILE">My Profile</string>
    <string name="ACC_CONTACT">My Contact</string>
    <string name="ACC_PREFERENCES">Preferences</string>
    <string name="ACC_MANAGE">Manage My Account</string>
    <string name="ACC_CHANGEPASS">Change Password</string>
    <string name="PROFILE_NAV_TITLE">My Profiles</string>
    <string name="PROFILE_MEMBER_NUMBER">Member Number</string>
    <string name="PROFILE_CURRENT_TIER">Current Tier</string>
    <string name="PROFILE_TITLE">Title</string>
    <string name="PROFILE_FAMILY_NAME">Family Name</string>
    <string name="PROFILE_GIVEN_NAMES">Given Names</string>
    <string name="PROFILE_NAMING_CONVENTION">Naming Convention</string>
    <string name="PROFILE_DATE_OF_BIRTH">Date of birth</string>
    <string name="PROFILE_GENDER">Gender</string>
    <string name="PROFILE_PREFERRED_LANGUAGE">Preferred Language</string>
    <string name="PROFILE_NATIONALITY">Nationality</string>
    <string name="PROFILE_PASSPORD">Passpord / ID Card</string>
    <string name="PROFILE_AVAIABLE_AWARD">Available Award Miles</string>
    <string name="PROFILE_EXPIRY_DATE">Expiry Date</string>
    <string name="PROFILE_MILES_TO_EXPIRE">Miles to Expire</string>
    <string name="PROFILE_TO_NEXT_TIER">To Next Tier</string>
    <string name="PROFILE_SELECT_LANGUAGE">Select a language</string>
    <string name="PROFILE_SELECT_COUNTRY">Select a country</string>
    <string name="PROFILE_SELECT_NAMING">Select a convention</string>
    <string name="CONTACT_NAV_TITLE">My Contact</string>
    <string name="CONTACT_BUSINESS_ADDRESS">BUSINESS ADDRESS</string>
    <string name="CONTACT_PREFERRED">Preferred</string>
    <string name="CONTACT_BUSINESS_TITLE">Business Title</string>
    <string name="CONTACT_COMPANY">Company</string>
    <string name="CONTACT_DEPARTMENT">Department</string>
    <string name="CONTACT_ADDRESS">Address</string>
    <string name="CONTACT_ADDRESS2">Address (continued)</string>
    <string name="CONTACT_COUNTRY">Country</string>
    <string name="CONTACT_PROVINCE">Province/State</string>
    <string name="CONTACT_DISTRICT">District/City</string>
    <string name="CONTACT_POSTAL_CODE">Postal Code</string>
    <string name="CONTACT_PHONE_CONTACT">PHONE CONTACT</string>
    <string name="CONTACT_BUSINESS_PHONE">Business Phone</string>
    <string name="CONTACT_FAX">Fax Number</string>
    <string name="CONTACT_BUSINESS_EMAIL">BUSINESS EMAIL</string>
    <string name="CONTACT_BUSINESS_EMAIL_">Business Email</string>
    <string name="CONTACT_PRIVATE_ADDRESS">PRIVATE ADDRESS</string>
    <string name="CONTACT_HOMEPHONE">Home Phone</string>
    <string name="CONTACT_CELLPHONE">Cell Phone</string>
    <string name="CONTACT_PRIVATE_EMAIL">PRIVATE EMAIL</string>
    <string name="CONTACT_PRIVATE_EMAIL_">Private Email</string>
    <string name="P_TEXT_HERE">Text here</string>
    <string name="P_ADDRESS">Address...</string>
    <string name="P_SELECT_COUNTRY">Select Country</string>
    <string name="P_PROVINCE">Province/State</string>
    <string name="P_DISTRICT">District/City</string>
    <string name="P_CODE">Code...</string>
    <string name="P_PHONE">(+84) 555 555</string>
    <string name="P_EMAIL">Example@gmail.com</string>
    <string name="PREFERENCES_NAV_TITLE">My Preferences</string>
    <string name="PREFERENCES_MEAL_PREFERENCE">MEAL PREFERENCE</string>
    <string name="PREFERENCES_SEAT_PREFERENCE">SEAT PREFERENCE</string>
    <string name="PREFERENCES_MEAL">Meal</string>
    <string name="PREFERENCES_SEAT">Seat</string>
    <string name="PREFERENCES_SELECT_MEAL">Select a meal</string>
    <string name="PREFERENCES_SELECT_SEAT">Select a seat</string>
    <string name="PREFERENCES_LIFE_STYLES">Life Styles</string>
    <string name="LIFE_STYLE">Life Style</string>
    <string name="LIFESTYLES">Lifestyles</string>
    <string name="HOBBY">Hobby</string>
    <string name="NAME">Name</string>
    <string name="DESCRIPTION">Description</string>
    <string name="P_LIFESTYLE">Music, movie, shop...</string>
    <string name="P_NAME">Name...</string>
    <string name="P_DISCRIPTION">Description here...</string>
    <string name="MANAGE_NAV_TITLE">Manage My ACC</string>
    <string name="MANAGE_MILEAGE">MILEAGE ACCOUNT INFORMATION</string>
    <string name="MANAGE_CURRENT_QUALIFYING">Current Qualifying Period</string>
    <string name="MANAGE_TOTAL_QUALIFYING">Total Qualifying Miles</string>
    <string name="MANAGE_DOMESTIC_FLILGHTS">Qualifying miles earned on domestic flights</string>
    <string name="MANAGE_INTERNATION_FLIGHTS">Qualifying miles earned on international flights</string>
    <string name="MANAGE_ON_OTHER">Qualifying miles earned on others</string>
    <string name="MANAGE_TO_NEXT_TIER">To Next Tier</string>
    <string name="MANAGE_TOTAL_LIFETIME">Total lifetime earned</string>
    <string name="MANAGE_TOTAL_REDEEMED">Total redeemed</string>
    <string name="MANAGE_AVAILABLE_MILES">Current available miles</string>
    <string name="MANAGE_EXPIRY_DATE">Expiry Date</string>
    <string name="MANAGE_MILES_TO_EXPIRE">Miles to Expire</string>
    <string name="MANAGE_YOU_CAN_CHECK">      You can check your account transactions from the last 18 months here.</string>
    <string name="MANAGE_SEGMENTS">Segments</string>
    <string name="MANAGE_WEBVIEW_CONTENT">Miles for your flights with Vietnam Airlines will be credited to your account approximately 3 days after the flight. It may take up to 14 days to credit the miles for your flights with our airlines partners. If the miles have not been credited to your account, please</string>
    <string name="MANAGE_CLICK_HERE">click here</string>
    <string name="TRANSACTION_NAV_TITLE">Account Transaction</string>
    <string name="TRANSACTION_DATE">Date</string>
    <string name="TRANSACTION_ACTIVITY">Activity</string>
    <string name="TRANSACTION_REFERENCE">Reference</string>
    <string name="TRANSACTION_MILES">Miles</string>
    <string name="TRANSACTION_QUALIFYING_MILES">Qualifying Miles</string>
    <string name="CHANGE_PASS_NAV_TITLE">Change Password</string>
    <string name="CHANGE_PASS_HERE_YOU_CAN_CHANGE">Here you can change your password for Golden Lotus Plus Log-in</string>
    <string name="CHANGE_PASS_CONFIRMED">Confirmed Password</string>
    <string name="CHANGE_PASS_OLD_PASS">Your Old Password</string>
    <string name="CHANGE_PASS_NEW_PASS">Your New Password</string>
    <string name="REQUIRED">Required</string>
    <string name="REGISTER_INTRODUCTION">        Here you can register for Golden Lotus Plus promotions. Please follow the instructions in the mail provided</string>
    <string name="REGISTER_NAV_TITLE">Register Promotion</string>
    <string name="REGISTER_MEMBER_NO">Member No</string>
    <string name="REGISTER_MEMBER_NAME">Member Name</string>
    <string name="REGISTER_P_PROMOTION_CODE">Promotion Code</string>
    <string name="CHANGE_PASS_SAVE">Save</string>
    <string name="REQUESTDETAIL_NAV_TITLE">Message Details</string>
    <string name="REQUEST_ADD_NEW_NAV_TITLE">Send Request</string>
    <string name="REQUEST_ADD_NEW_BTN_SELECT">Select</string>
    <string name="REQUEST_ADD_NEW_ALERT">Please try again</string>
    <string name="REQUEST_ADD_NEW_CREATE_DATE">Create Date</string>
    <string name="REQUEST_ADD_NEW_MEMBER_NAME">Member\'s Name</string>
    <string name="REQUEST_ADD_NEW_MEMBERSHIP_NO">Membership No</string>
    <string name="REQUEST_ADD_NEW_MEMBERSHIP_TIER">Membership Tier</string>
    <string name="REQUEST_ADD_NEW_MESSAGE_DETAIL">Message Details</string>
    <string name="REQUEST_ADD_NEW_SUBJECT_TEXT">Subject Text</string>
    <string name="REQUEST_ADD_NEW_INTRODUCTION">I would like to send the below message to the Golden Lotus Plus</string>
    <string name="REQUEST_NAV_TITLE">Send Request</string>
    <string name="REQUEST_MESSAGE_TITLE">MESSAGE TITLE</string>
    <string name="REQUEST_CREATE_DATE">Create Date</string>
    <string name="AIRLINE_ADD_MORE_NAV_TITLE">Airline Awards</string>
    <string name="AIRLINE_ADD_MORE_DOB">Date Of Birth</string>
    <string name="AIRLINE_ADD_MORE_PASSPORT">Passport/ID</string>
    <string name="AIRLINE_ADD_MORE_USER_NAME">User Name</string>
    <string name="AIRLINE_DETAIL_NAV_TITLE">Airline Awards</string>
    <string name="AIRLINE_NAV_TITLE">Airline Awards</string>
    <string name="AIRLINE_BTN_ONLINE_REQUEST">Online Request</string>
    <string name="AIRLINE_NOMINEE_NAME">NOMINEE NAME</string>
    <string name="AIRLINE_DOB">Date of birth</string>
    <string name="AIRLINE_PASSPORT">Passport/ID</string>
    <string name="AIRLINE_YOUR_NOMINEE_LIST">Your Nominee List</string>
    <string name="BAGGAGE_ADD_MORE_NAV_TITLE">Baggage Awards</string>
    <string name="BAGGAGE_ADD_MORE_DOB">Date Of Birth</string>
    <string name="BAGGAGE_ADD_MORE_PASSPORT">Passport/ID</string>
    <string name="BAGGAGE_ADD_MORE_USER_NAME">User Name</string>
    <string name="BAGGAGE_NAV_TITLE">Baggage Awards</string>
    <string name="CMM_MEMBERSHIP_NO">Membership No</string>
    <string name="CMM_MEMBER_NAME">Member\'s Name</string>
    <string name="CMM_CARRIER">Carrier</string>
    <string name="CMM_BOOKING_CLASS">Booking Class</string>
    <string name="CMM_FLIGHT_NUMBER">Flight Number</string>
    <string name="CMM_FROM">From</string>
    <string name="CMM_TO">To</string>
    <string name="CMM_TICKET_NUMBER">Ticket Number</string>
    <string name="CMM_REQUIRED">Required</string>
    <string name="CMM_FLIGHT_DATE">Flight Date</string>
    <string name="CMM_SUBMIT">Submit</string>
    <string name="CMM_TITLE">Claim Missing Miles</string>
    <string name="CMM_VNA">Vietnam Airline</string>
    <string name="CMM_VNAP">Airlines Partners</string>
    <string name="CMM_NONVNAP">Non-airlines Partners</string>
</resources>