<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/cmm_header" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/Gray91"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_MEMBERSHIP_NO"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMembershipNo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:gravity="center_vertical"
                    android:text="0130296294"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_MEMBER_NAME"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvMemberName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:gravity="center_vertical"
                    android:text="NGUYEN THU HUONG"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_CARRIER"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spCarrier"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:entries="@array/aCarrier"
                    android:gravity="center_vertical"
                    android:prompt="@string/CMM_CARRIER"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_BOOKING_CLASS"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spBookingClass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:entries="@array/aFlightClass"
                    android:gravity="center_vertical"
                    android:prompt="@string/CMM_BOOKING_CLASS"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_FLIGHT_NUMBER"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtFlightNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:gravity="center_vertical"
                    android:hint="@string/CMM_REQUIRED"
                    android:inputType="number"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_FROM"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spFromCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:entries="@array/aFlightFrom"
                    android:gravity="center_vertical"
                    android:prompt="@string/CMM_FROM"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_TO"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Spinner
                    android:id="@+id/spToCountry"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:entries="@array/aFlightFrom"
                    android:gravity="center_vertical"
                    android:prompt="@string/CMM_TO"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_FLIGHT_DATE"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btDateFlightPicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:drawableRight="@drawable/ic_launcher"
                    android:gravity="center_vertical"
                    android:text="11/04/2013"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingTop="20dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/CMM_TICKET_NUMBER"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/edtTicketNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="15dp"
                    android:layout_weight="1.4"
                    android:gravity="center_vertical"
                    android:hint="@string/CMM_REQUIRED"
                    android:inputType="number"
                    android:textColor="@color/Gray61"
                    android:textSize="14sp" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@color/Gray81" />

        <Button
            android:layout_marginTop="10dp"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:text="@string/CMM_SUBMIT" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>